--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <div class="grid" style="margin-top:12px;">
           <!-- Austria -->
           <div class="glass card tilt" data-tilt>
-            <img class="thumb" src="photos_austria/Austria_1.jpg" alt="Austria" loading="lazy">
+            <img class="thumb" src="photos_austria/Austria_3.jpg" alt="Austria" loading="lazy">
             <div style="margin-top:10px; display:flex; gap:8px; align-items:center;">
               <div>🇦🇹</div><div style="font-weight:600">Austria</div>
             </div>
@@ -286,7 +286,7 @@
 
           <!-- Canada -->
           <div class="glass card tilt" data-tilt>
-            <img class="thumb" src="photos_canada/canada_1.jpg" alt="Canada" loading="lazy">
+            <img class="thumb" src="photos_canada/canada_3.jpg" alt="Canada" loading="lazy">
             <div style="margin-top:10px; display:flex; gap:8px; align-items:center;">
               <div>🇨🇦</div><div style="font-weight:600">Canada</div>
             </div>
@@ -294,7 +294,7 @@
 
           <!-- Switzerland (CH) -->
           <div class="glass card tilt" data-tilt>
-            <img class="thumb" src="photos_ch/Switzerland_1.jpg" alt="Switzerland" loading="lazy">
+            <img class="thumb" src="photos_ch/Switzerland_2.jpg" alt="Switzerland" loading="lazy">
             <div style="margin-top:10px; display:flex; gap:8px; align-items:center;">
               <div>🇨🇭</div><div style="font-weight:600">Switzerland</div>
             </div>
@@ -302,7 +302,7 @@
 
           <!-- Liechtenstein (FL) -->
           <div class="glass card tilt" data-tilt>
-            <img class="thumb" src="photos_fl/Liechtenstein_1.jpg" alt="Liechtenstein" loading="lazy">
+            <img class="thumb" src="photos_fl/Liechtenstein_2.jpg" alt="Liechtenstein" loading="lazy">
             <div style="margin-top:10px; display:flex; gap:8px; align-items:center;">
               <div>🇱🇮</div><div style="font-weight:600">Liechtenstein</div>
             </div>
@@ -358,7 +358,7 @@
 
           <!-- United Kingdom -->
           <div class="glass card tilt" data-tilt>
-            <img class="thumb" src="photos_uk/UK_1.jpg" alt="United Kingdom" loading="lazy">
+            <img class="thumb" src="photos_uk/UK_4.jpg" alt="United Kingdom" loading="lazy">
             <div style="margin-top:10px; display:flex; gap:8px; align-items:center;">
               <div>🇬🇧</div><div style="font-weight:600">United Kingdom</div>
             </div>
@@ -383,41 +383,39 @@
             <div style="display:flex; justify-content:space-between; gap:16px; align-items:flex-start;">
               <div>
                 <div style="font-weight:700; font-size:18px; letter-spacing:-0.01em;">Sindesi</div>
-                <div class="muted">AI-first note-taking that thinks with you</div>
+                <div class="muted">Connecting people through skills</div>
                 <div class="stack">
-                  <span class="pill">Next.js</span>
-                  <span class="pill">Edge Functions</span>
-                  <span class="pill">Vectors</span>
+                  <span class="pill">Services Platform</span>
+                  <span class="pill">Operating in Switzerland</span>
+                  <span class="pill">launching in 2025</span>
                 </div>
               </div>
               <div class="pill">↗</div>
             </div>
           </a>
 
-          <a class="glass card tilt" data-tilt href="https://example.com/seaglass" target="_blank" rel="noreferrer" style="text-decoration:none; color:inherit;">
+          <a class="glass card tilt" data-tilt href="https://beskou.com" target="_blank" rel="noreferrer" style="text-decoration:none; color:inherit;">
             <div style="display:flex; justify-content:space-between; gap:16px; align-items:flex-start;">
               <div>
-                <div style="font-weight:700; font-size:18px; letter-spacing:-0.01em;">SeaGlass</div>
-                <div class="muted">Privacy-first analytics with zero cookies</div>
+                <div style="font-weight:700; font-size:18px; letter-spacing:-0.01em;">beskou</div>
+                <div class="muted">because accessability matters.</div>
                 <div class="stack">
-                  <span class="pill">Cloudflare</span>
-                  <span class="pill">ClickHouse</span>
-                  <span class="pill">Go</span>
+                  <span class="pill">shoe</span>
+                  <span class="pill">accessability</span>
+                  <span class="pill">coming in 2027</span>
                 </div>
               </div>
               <div class="pill">↗</div>
             </div>
           </a>
 
-          <a class="glass card tilt" data-tilt href="https://example.com/orbit" target="_blank" rel="noreferrer" style="text-decoration:none; color:inherit;">
+          <a class="glass card tilt" data-tilt href="https://stevejobs.ch" target="_blank" rel="noreferrer" style="text-decoration:none; color:inherit;">
             <div style="display:flex; justify-content:space-between; gap:16px; align-items:flex-start;">
               <div>
-                <div style="font-weight:700; font-size:18px; letter-spacing:-0.01em;">Orbit</div>
-                <div class="muted">Tiny CRM for indie founders</div>
+                <div style="font-weight:700; font-size:18px; letter-spacing:-0.01em;">Steve Jobs</div>
+                <div class="muted">a tribute to my hero</div>
                 <div class="stack">
-                  <span class="pill">Supabase</span>
-                  <span class="pill">React</span>
-                  <span class="pill">Postgres</span>
+                  <span class="pill">for Steve</span>
                 </div>
               </div>
               <div class="pill">↗</div>
