--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>THE TIME IS NOW — Portfolio</title>
+  <title>Dario Tino</title>
   <meta name="description" content="THE TIME IS NOW — personal portfolio with Hey, World, Story, and Projects." />
 
   <!-- Inter font -->
