--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji";
       color:var(--text);
       line-height:1.5;
-      background: url('sky1.jpg') center / cover fixed no-repeat;  /* desktop/tablet galaxy */
+      background: url('sky1_old2.jpg') center / cover fixed no-repeat;  /* desktop/tablet galaxy */
       min-height:100vh;
     }
     body::before{
