Update coming soon page

--- a/index.html
+++ b/index.html
@@ -211,9 +211,7 @@
       <p class="kicker">Coming soon</p>
       <h1 class="title">Fuel for your next chapter.</h1>
       <p class="lead">
-        We're building a motivation brand that blends practical books, sharp apparel, and daily tools
-        to help you move from <em>intent</em> to <em>action</em>. Be first to know when we launch and get an
-        exclusive day-one offer.
+        We're building a motivation brand, beautiful things are on the way. and always remember... the time is NOW!
       </p>
 
       <div class="countdown" role="group" aria-label="Launch countdown">
