fix postgres connection and admin setup

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 <script
   src="https://backend-still-river-1228.fly.dev/widget/axyom.js"
   data-api="https://backend-still-river-1228.fly.dev"
-  data-site="dariotino.com"
-  data-key="axyom_live_550d703521be0a54f3664de8f5d940c1">
+  data-site="nvbr.ch"
+  data-key="axyom_live_ef24e4f1b01717baeb9ee7db141593fa">
 </script>
 
 </body>
