--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 <script
   src="https://backend-still-river-1228.fly.dev/widget/axyom.js"
   data-api="https://backend-still-river-1228.fly.dev"
-  data-site="nvbr.ch"
-  data-key="axyom_live_ef24e4f1b01717baeb9ee7db141593fa">
+  data-site="mvbr.ch"
+  data-key="axyom_live_e725b8ceec7dff8914ea36392f96415b">
 </script>
 
 </body>
