Update AXYOM widget integration

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <script
   src="https://backend-still-river-1228.fly.dev/widget/axyom.js"
   data-api="https://backend-still-river-1228.fly.dev"
-  data-site="mvbr.ch"
+  data-site="canyonapps.com"
   data-key="axyom_live_b743e095342a4be7e2c560561ea14681">
 </script>
 
