Redesign homepage: split hero, clickable book, scroll cue balloon

--- a/index.html
+++ b/index.html
@@ -26,57 +26,63 @@
   </header>
 
   <!-- HERO -->
-  <section class="hero">
-    <div class="hero-text">
-      <h1 class="glass-text">WELCOME</h1>
-      <p class="glass-text subtext">float free...</p>
+  <section class="hero hero-split">
+
+    <!-- LEFT : BOOK -->
+    <div class="hero-left">
+      <a
+        href="https://www.amazon.com/Time-Now-Master-Your-Mind/dp/B0GKCJGZRP/"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="book-link"
+      >
+        <img
+          src="thetimeisnow.png"
+          alt="The Time Is Now book cover"
+          class="book-cover"
+        >
+      </a>
     </div>
 
-    <img src="jumper.png" alt="" class="jumper" id="jumper">
+    <!-- RIGHT : TEXT -->
+    <div class="hero-right">
+      <h1 class="glass-text">WELCOME</h1>
+      <h2 class="subtext hero-sub">float free.</h2>
+
+      <a
+        href="https://www.amazon.com/Time-Now-Master-Your-Mind/dp/B0GKCJGZRP/"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="cta-button"
+      >
+        GET BOOK NOW
+      </a>
+    </div>
+
   </section>
 
-  <div class="cluster">
+  <!-- SCROLL CUE (BALLOON) -->
+  <section class="scroll-cue">
+    <img
+      src="balloon.png"
+      alt=""
+      class="scroll-balloon"
+    >
+  </section>
 
-    <!-- BOOK -->
-    <section class="section">
-      <h2 class="glass-text">GET MY BOOK</h2>
-      <a href="https://www.amazon.com"
-         target="_blank"
-         rel="noopener noreferrer"
-         class="glass-link">
-        amazon.com
-      </a>
-    </section>
+  <!-- FOLLOW -->
+  <section class="follow">
+    <h2 class="glass-text follow-title">FOLLOW ME</h2>
 
-    <!-- GAP WITH TEXT + BALLOON -->
-    <div class="floating-gap">
-      <p class="glass-text subtext gap-text">evoke lightness...</p>
-      <img src="balloon.png" alt="" class="balloon" id="balloon">
-    </div>
-
-    <!-- SOCIAL -->
-    <section class="section">
-      <h2 class="glass-text">FOLLOW ME</h2>
-      <a href="https://www.instagram.com/darioaapl/"
-         target="_blank"
-         rel="noopener noreferrer"
-         class="glass-link">
+    <div class="social-row">
+      <a href="https://www.instagram.com/darioaapl/" target="_blank" class="social-btn">
         Instagram
       </a>
-    </section>
-
-  </div>
-
-  <script src="script.js"></script>
-<script
-  src="https://backend-still-river-1228.fly.dev/widget/axyom.js"
-  data-api="https://backend-still-river-1228.fly.dev"
-  data-site="canyonapps.com"
-  data-key="axyom_live_b743e095342a4be7e2c560561ea14681">
-</script>
+      <a href="https://www.linkedin.com/in/dario-tino-412262223" class="social-btn">
+        LinkedIn
+      </a>
+    </div>
+  </section>
 
 </body>
 </html>
-
-
-
