Redesign homepage: split hero, clickable book, scroll cue balloon

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         rel="noopener noreferrer"
         class="cta-button"
       >
-        GET BOOK NOW
+        MY BOOK NOW ON AMAZON
       </a>
     </div>
 
