Redesign homepage: split hero, clickable book, scroll cue balloon

--- a/index.html
+++ b/index.html
@@ -29,20 +29,22 @@
   <section class="hero hero-split">
 
     <!-- LEFT : BOOK -->
-    <div class="hero-left">
-      <a
-        href="https://www.amazon.com/Time-Now-Master-Your-Mind/dp/B0GKCJGZRP/"
-        target="_blank"
-        rel="noopener noreferrer"
-        class="book-link"
+<div class="hero-left">
+  <a
+    href="https://www.amazon.com/Time-Now-Master-Your-Mind/dp/B0GKCJGZRP/"
+    target="_blank"
+    rel="noopener noreferrer"
+    class="book-link"
+  >
+    <div class="book-shadow">
+      <img
+        src="thetimeisnow.png"
+        alt="The Time Is Now book cover"
+        class="book-cover"
       >
-        <img
-          src="thetimeisnow.png"
-          alt="The Time Is Now book cover"
-          class="book-cover"
-        >
-      </a>
     </div>
+  </a>
+</div>
 
     <!-- RIGHT : TEXT -->
     <div class="hero-right">
