Your commit message

--- a/index.html
+++ b/index.html
@@ -52,13 +52,94 @@
       <h2 class="subtext hero-sub">float free.</h2>
 
       <a
-        href="https://www.amazon.com/Time-Now-Master-Your-Mind/dp/B0GKCJGZRP/"
+        href="https://www.amazon.de/dp/B0GKBLZXDS"
         target="_blank"
         rel="noopener noreferrer"
         class="cta-button"
       >
-        MY BOOK NOW ON AMAZON
+        MY BOOK NOW ON AMAZON 🇩🇪
       </a>
+
+     <br>
+
+     <a
+        href="https://www.amazon.com/dp/B0GKBLZXDS"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="cta-button"
+      >
+        MY BOOK NOW ON AMAZON 🇺🇸
+      </a>
+
+           <br>
+
+     <a
+        href="https://www.amazon.fr/dp/B0GKBLZXDS"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="cta-button"
+      >
+        MY BOOK NOW ON AMAZON 🇫🇷
+      </a>
+
+                 <br>
+
+     <a
+        href="https://www.amazon.fr/dp/B0GKBLZXDS"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="cta-button"
+      >
+        MY BOOK NOW ON AMAZON 🇬🇧
+      </a>
+
+      <br>
+
+<div class="dropdown">
+  <button class="more-btn">MORE ▾</button>
+
+  <div class="dropdown-menu">
+<button onclick="window.open('https://www.amazon.es/dp/B0GKBLZXDS', '_blank')">
+  🇪🇸 ES
+</button>
+<button onclick="window.open('https://www.amazon.it/dp/B0GKBLZXDS', '_blank')">
+  🇮🇹 IT
+</button>
+
+<button onclick="window.open('https://www.amazon.nl/dp/B0GKBLZXDS', '_blank')">
+  🇳🇱 NL
+</button>
+
+<button onclick="window.open('https://www.amazon.pl/dp/B0GKBLZXDS', '_blank')">
+  🇵🇱 PL
+</button>
+
+<button onclick="window.open('https://www.amazon.se/dp/B0GKBLZXDS', '_blank')">
+  🇸🇪 SE
+</button>
+
+<button onclick="window.open('https://www.amazon.be/dp/B0GKBLZXDS', '_blank')">
+  🇧🇪 BE
+</button>
+
+<button onclick="window.open('https://www.amazon.ie/dp/B0GKBLZXDS', '_blank')">
+  🇮🇪 IE
+</button>
+
+<button onclick="window.open('https://www.amazon.co.jp/dp/B0GKBLZXDS', '_blank')">
+  🇯🇵 JP
+</button>
+
+<button onclick="window.open('https://www.amazon.ca/dp/B0GKBLZXDS', '_blank')">
+  🇨🇦 CA
+</button>
+
+<button onclick="window.open('https://www.amazon.com.au/dp/B0GKBLZXDS', '_blank')">
+  🇦🇺 AU
+</button>
+  </div>
+</div>
+
     </div>
 
   </section>
@@ -87,4 +168,9 @@
   </section>
 
 </body>
+
+<footer class="site-footer">
+  BUILT WITH LOVE IN LIECHTENSTEIN 🇱🇮
+</footer>
+
 </html>
