--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
+
 <body>
 
   <!-- ATMOSPHERIC TINT -->
@@ -167,7 +168,30 @@
     </div>
   </section>
 
+
+<script>
+  const dropdown = document.querySelector('.dropdown');
+  const button = document.querySelector('.more-btn');
+
+  if (dropdown && button) {
+
+    button.addEventListener('click', (e) => {
+      e.stopPropagation();
+      dropdown.classList.toggle('open');
+    });
+
+    document.addEventListener('click', () => {
+      dropdown.classList.remove('open');
+    });
+
+    dropdown.addEventListener('click', (e) => {
+      e.stopPropagation();
+    });
+  }
+</script>
+
 </body>
+
 
 <footer class="site-footer">
   BUILT WITH LOVE IN LIECHTENSTEIN 🇱🇮
