Your commit message

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   🇸🇪 SE
 </button>
 
-<button onclick="window.open('https://www.amazon.be/dp/B0GKBLZXDS', '_blank')">
+<button onclick="window.open('https://www.amazon.com.be/dp/B0GKBLZXDS', '_blank')">
   🇧🇪 BE
 </button>
 
